# TwitchSpotifySRBot

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  GITHUB_UPLOAD.md  INSTALL.md  LICENSE  MIGRATION.md  OBS_SETUP.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  TwitchSRBot.spec  app.py  build.py  create_icon.py  init_spotify_auth.py  pyproject.toml  requirements.txt  update_help.py  update_version.py
config/: history.json
legacy/: main_legacy_backup_20251213_124510.py
locales/: de.json  en.json
src/: __init__.py  constants.py
src/models/: __init__.py  config.py  song.py
src/services/: __init__.py  bot_orchestrator.py  history_manager.py  obs_overlay.py  queue_manager.py  spotify_service.py  twitch_service.py
src/ui/: __init__.py  help_window.py  main_window.py  settings_window.py  stats_window.py
src/utils/: __init__.py  config_manager.py  i18n.py  logging_config.py  twitch_oauth.py
