[project]
name = "twitch-spotify-bot"
version = "0.9.0"  # Managed in src/constants.py
description = "A Twitch bot that manages Spotify song requests with queue and voting system"
authors = [
    {name = "uprisin6"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "customtkinter>=5.2.0",
    "spotipy>=2.23.0",
    "twitchio>=2.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
spotify-bot = "app:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
]
